<resources>
    <string name="appName">Xray</string>
    <string name="noValue">-</string>
    <string name="drawerOpen">Open drawer</string>
    <string name="drawerClose">Close drawer</string>
    <string name="scanQrCode">Scan QrCode</string>
    <string name="fromClipboard">From Clipboard</string>
    <string name="loading">Loading…</string>
    <string name="vpnStart">START</string>
    <string name="vpnStop">STOP</string>
    <string name="pingNotConnected">Not Connected</string>
    <string name="pingConnected">Connected, tap to check connection</string>
    <string name="pingTesting">Testing…</string>
    <string name="appFullName">SaeedDev94/Xray</string>
    <string name="xrayLabel">XTLS/Xray-core</string>
    <string name="tun2socksLabel">heiher/hev-socks5-tunnel</string>
    <string name="tun2socksVersion">2.18.0</string>
    <string name="assets">Assets</string>
    <string name="links">Links</string>
    <string name="logs">Logs</string>
    <string name="appsRouting">Apps Routing</string>
    <string name="configs">Configs</string>
    <string name="settings">Settings</string>
    <string name="geoIp">GeoIP</string>
    <string name="geoSite">GeoSite</string>
    <string name="refreshLinks">Refresh Links</string>
    <string name="newLink">New Link</string>
    <string name="editLink">Edit Link</string>
    <string name="linkName">Name</string>
    <string name="linkAddress">Address</string>
    <string name="linkUserAgent">User-Agent</string>
    <string name="linkIsActive">Is Active?</string>
    <string name="createLink">Create</string>
    <string name="updateLink">Update</string>
    <string name="closeLink">Close</string>
    <string name="newProfile">New Profile</string>
    <string name="editProfile">Edit Profile</string>
    <string name="profileName">Name</string>
    <string name="profileConfig">Config</string>
    <string name="editIcon">Edit Icon</string>
    <string name="deleteIcon">Delete Icon</string>
    <string name="downloadIcon">Download Icon</string>
    <string name="fileOpenIcon">File Open Icon</string>
    <string name="copyLogs">Copy Logs</string>
    <string name="deleteLogs">Delete Logs</string>
    <string name="appIcon">App Icon</string>
    <string name="openJson">Open Json</string>
    <string name="appsRoutingSave">Save</string>
    <string name="saveConfigs">Save Configs</string>
    <string name="appsRoutingExcludeMode">Mode: Exclude</string>
    <string name="appsRoutingIncludeMode">Mode: Include</string>
    <string name="saveSettings">Save Settings</string>
    <string name="saveProfile">Save Profile</string>
    <string name="invalidProfile">Invalid Profile</string>
    <string name="invalidLink">Invalid Link</string>
    <string name="forbiddenHttp">HTTP is forbidden</string>
    <string name="onlyHttps">Only HTTPS is acceptable</string>
    <string name="cancel">Cancel</string>
    <string name="ignore">Ignore</string>
    <string name="ok">OK</string>

    <!-- Basic Settings -->
    <string name="socksAddress">Socks Address</string>
    <string name="socksPort">Socks Port</string>
    <string name="socksUsername">Socks Username</string>
    <string name="socksPassword">Socks Password</string>
    <string name="geoIpAddress">GeoIP Address</string>
    <string name="geoSiteAddress">GeoSite Address</string>
    <string name="pingAddress">Ping Address</string>
    <string name="pingTimeout">Ping Timeout</string>
    <string name="refreshLinksInterval">Refresh Links Interval</string>
    <string name="bypassLan">Bypass LAN (IPv4)</string>
    <string name="enableIpV6">Enable IPv6</string>
    <string name="socksUdp">Socks UDP</string>
    <string name="tun2socks">Tun2socks</string>
    <string name="bootAutoStart">Boot Auto Start</string>
    <string name="refreshLinksOnOpen">Refresh Links On Open</string>
    <string name="hardwareId">X-HWID</string>

    <!-- Advanced Settings -->
    <string name="primaryDns">Primary DNS (v4)</string>
    <string name="secondaryDns">Secondary DNS (v4)</string>
    <string name="primaryDnsV6">Primary DNS (v6)</string>
    <string name="secondaryDnsV6">Secondary DNS (v6)</string>
    <string name="tunName">Tun Name</string>
    <string name="tunMtu">Tun Mtu</string>
    <string name="tunAddress">Tun Address (IPv4)</string>
    <string name="tunPrefix">Prefix</string>
    <string name="tunAddressV6">Tun Address (IPv6)</string>
    <string name="tunPrefixV6">Prefix</string>
    <string name="tunTcpReadWriteTimeout">Hev TCP R/W Timeout</string>
    <string name="tunUdpReadWriteTimeout">Hev UDP R/W Timeout</string>
    <string name="hotspotInterface">Hotspot Interface</string>
    <string name="tetheringInterface">Tethering Interface</string>
    <string name="tproxyAddress">TPROXY Address</string>
    <string name="tproxyPort">TPROXY Port</string>
    <string name="tproxyBypassWiFi">TPROXY Bypass WiFi</string>
    <string name="tproxyAutoConnect">TPROXY Auto Connect</string>
    <string name="tproxyHotspot">TPROXY Hotspot</string>
    <string name="tproxyTethering">TPROXY Tethering</string>
    <string name="transparentProxy">Transparent Proxy</string>
    <string name="tunRoutes">Tun Routes</string>
</resources>
