<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/toolsVersion">
        <item
            android:id="@+id/appFullName"
            android:title="@string/appFullName" />
        <item
            android:id="@+id/appVersion"
            android:title="@string/noValue" />
        <item
            android:id="@+id/xrayLabel"
            android:title="@string/xrayLabel" />
        <item
            android:id="@+id/xrayVersion"
            android:title="@string/noValue" />
        <item
            android:id="@+id/tun2socksLabel"
            android:title="@string/tun2socksLabel" />
        <item
            android:id="@+id/tun2socksVersion"
            android:title="@string/tun2socksVersion" />
    </group>
    <group android:id="@+id/drawerMain">
        <item
            android:id="@+id/assets"
            android:icon="@drawable/baseline_folder_open"
            android:title="@string/assets" />
        <item
            android:id="@+id/links"
            android:icon="@drawable/baseline_link"
            android:title="@string/links" />
        <item
            android:id="@+id/logs"
            android:icon="@drawable/baseline_adb"
            android:title="@string/logs" />
        <item
            android:id="@+id/excludedApps"
            android:icon="@drawable/baseline_alt_route"
            android:title="@string/excludedApps" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/baseline_settings"
            android:title="@string/settings" />
    </group>
</menu>
