<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/refreshLinks"
        android:title="@string/refreshLinks"
        android:icon="@drawable/baseline_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:title="@string/newProfile"
        android:icon="@drawable/baseline_add"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/newProfile"
                android:title="@string/newProfile" />
            <item
                android:id="@+id/scanQrCode"
                android:title="@string/scanQrCode" />
            <item
                android:id="@+id/fromClipboard"
                android:title="@string/fromClipboard" />
        </menu>
    </item>
</menu>
