<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/socksAddress"
                    android:labelFor="@id/socksAddress" />
                <EditText
                    android:id="@+id/socksAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:autofillHints="" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/socksPort"
                    android:labelFor="@id/socksPort" />
                <EditText
                    android:id="@+id/socksPort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:autofillHints="" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/socksUsername"
                    android:labelFor="@id/socksUsername" />
                <EditText
                    android:id="@+id/socksUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:autofillHints="" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/socksPassword"
                    android:labelFor="@id/socksPassword" />
                <EditText
                    android:id="@+id/socksPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:autofillHints="" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/geoIpAddress"
                    android:labelFor="@id/geoIpAddress" />
                <EditText
                    android:id="@+id/geoIpAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:autofillHints="" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/geoSiteAddress"
                    android:labelFor="@id/geoSiteAddress" />
                <EditText
                    android:id="@+id/geoSiteAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:autofillHints="" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pingAddress"
                    android:labelFor="@id/pingAddress" />
                <EditText
                    android:id="@+id/pingAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:autofillHints="" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pingTimeout"
                    android:labelFor="@id/pingTimeout" />
                <EditText
                    android:id="@+id/pingTimeout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:autofillHints="" />
            </LinearLayout>
        </LinearLayout>
        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/bypassLan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bypassLan" />
        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/enableIpV6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enableIpV6" />
        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/socksUdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/socksUdp" />
        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/bootAutoStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bootAutoStart" />
        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/refreshLinksOnOpen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refreshLinksOnOpen" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
