<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context=".SettingsActivity">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/socksAddress"
            android:labelFor="@id/socksAddress" />
        <EditText
            android:id="@+id/socksAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/socksPort"
            android:labelFor="@id/socksPort" />
        <EditText
            android:id="@+id/socksPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/socksUsername"
            android:labelFor="@id/socksUsername" />
        <EditText
            android:id="@+id/socksUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/socksPassword"
            android:labelFor="@id/socksPassword" />
        <EditText
            android:id="@+id/socksPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"
            android:autofillHints="" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/primaryDns"
            android:labelFor="@id/primaryDns" />
        <EditText
            android:id="@+id/primaryDns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secondaryDns"
            android:labelFor="@id/secondaryDns" />
        <EditText
            android:id="@+id/secondaryDns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/excludedApps"
            android:labelFor="@id/excludedApps" />
        <EditText
            android:id="@+id/excludedApps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:autofillHints="" />
        <LinearLayout
            android:id="@+id/xraySettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/xrayConfig"
                android:labelFor="@id/xrayConfig" />
            <EditText
                android:id="@+id/xrayConfig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:autofillHints="" />
        </LinearLayout>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/useXray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:text="@string/useXray" />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/socksUdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="33dp"
            android:text="@string/socksUdp" />
        <Button
            android:id="@+id/saveSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveSettings" />
    </LinearLayout>
</ScrollView>
